# movies-crud

./: .env  .gitignore  README.md  app.py  pyproject.toml
databases/: database.db
scripts/: samples.sql  tables.sql
static/scripts/: new-edit.js
static/styles/: base.css  list.css  new-edit.css
templates/: base.jinja  list.jinja  new-edit.jinja
